Mobile horizontal scroll fixups

--- a/themes/base-hugo-theme/assets/scss/seda-custom.scss
+++ b/themes/base-hugo-theme/assets/scss/seda-custom.scss
@@ -496,8 +496,8 @@ img {
     display: flex;
     justify-content: center;
     border-bottom: 1px solid #E9EAED;
-    margin-left: -16px;
-    margin-right: -16px;
+    // margin-left: -16px;
+    // margin-right: -16px;
     .dropdown {
       width: 100%;
       display: flex;
